--- a/app.json
+++ b/app.json
@@ -2,6 +2,12 @@
   "name": "Sourcebot",
   "description": "An open source newsbot to help African news organisations deliver personalized news and engage more effectively via messaging platforms.",
   "repository": "https://github.com/EuropeanJournalismCommision/Sourcebot",
+  "env": {
+    "ACCESS_TOKEN": {
+      "description": "Messenger ACCESS_TOKEN.",
+      "value": "secret"
+    }
+  },
   "addons": [
 	"heroku-postgresql:hobby-dev",
 	"bonsai:sandbox-6"
